Closed Bug 1505047 Opened 6 years ago Closed 6 years ago

Telemetry errors should not be shown in the console

Categories

(Core Graveyard :: Web Replay, defect)

defect
Not set
normal

Tracking

(firefox65 fixed)

RESOLVED FIXED
mozilla65
Tracking Status
firefox65 --- fixed

People

(Reporter: jlast, Assigned: bhackett1024)

References

Details

Attachments

(1 file)

Yesterday, ContentSessionStore and ExtensionTelemetry started failing and showing errors in the console.
Because telemetry is disabled in recording/replaying processes, telemetry operations always generate an error which is logged to the console. This patch suppresses this logging.
Assignee: nobody → bhackett1024
Attachment #9024087 - Flags: review?(kmaglione+bmo)
Attachment #9024087 - Flags: review?(kmaglione+bmo) → review+
Pushed by bhackett@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/129a6628b7d6 Don't show telemetry errors in the console when recording/replaying, r=kmag.
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: