Bug 1505047 - Don't show telemetry errors in the console when recording/replaying, r=kmag.